fix: create nowrap to h2 heading

--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ body {
 .theme-style > h2 {
 	font-size: 2rem;
 	font-weight: 300;
+	white-space: nowrap;
 }
 .theme-changer {
 	justify-content: center;
